[tool.poetry]
name = "forwardkinematics"
version = "0.6.1"
description = "\"Light-weight implementation of forward kinematics using casadi.\""
authors = ["Max Spahn <m.spahn@tudelft.nl>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/maxspahn/forwardKinematics.git"
repository = "https://github.com/maxspahn/forwardKinematics.git"


[tool.poetry.dependencies]
python = "^3.6.2,<3.11"
casadi = "3.5.6.pre2"
numpy = "^1.15.5"
urdf_parser_py = ">=0.0.3"
urdfenvs = {git = "https://git@github.com/maxspahn/gym_envs_urdf.git", rev = "master"}
motion-planning-scenes = {git = "https://git@github.com/maxspahn/motion_planning_scenes.git", rev = "main", optional = true}
pylint = "^2.13.4"

[tool.poetry.extras]
env = ["urdfenvs", "motion-planning-scenes"]

[tool.poetry.dev-dependencies]
jedi = "^0.18.1"
pytest = "^6.2.5"
pytest-coverage = "^0.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
