[tool.poetry]
name = "forwardkinematics"
version = "1.0.1"
description = "\"Light-weight implementation of forward kinematics using casadi.\""
authors = ["Max Spahn <m.spahn@tudelft.nl>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/maxspahn/forwardKinematics.git"
repository = "https://github.com/maxspahn/forwardKinematics.git"


[tool.poetry.dependencies]
python = "^3.6.2,<3.11"
casadi = "3.5.6.pre2"
numpy = "^1.15.5"
urdf_parser_py = ">=0.0.3"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]
jedi = "^0.18.1"
pytest = "^6.2.5"
pytest-coverage = "^0.0"
black = "^22.3.0"
pylint = "^2.13.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
